feat(buildStaticLib): added more static libs
Removed force download if md5 is bad for java static libs:

 * built from tree and copied all libraries in static folder (including `libextnet` / `libsunec`)
 * added these libs as linker flags
 * bridged `JVM_FillInStackTrace` with a dummy method